--- a/skincare page.html
+++ b/skincare page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skincare Bliss</title>
+  <title>Skincare Dream</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -111,7 +111,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Skincare Bliss</div>
+    <div class="logo">Skincare Dream</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -130,7 +130,7 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>At Skincare Bliss, we believe in natural, cruelty-free products that enhance your beauty while being kind to the planet.</p>
+    <p>At Skincare Dream, we believe in natural, cruelty-free products that enhance your beauty while being kind to the planet.</p>
   </section>
 
   <section id="products">
@@ -146,52 +146,11 @@
         <h3>Face Cleanser</h3>
         <p>Cleansing and refreshing for all skin types.</p>
       </div>
-      <div class="product-card" onclick="showDetails('serum')">
-        <img src="https://img.freepik.com/premium-photo/beautiful-shot-white-glass-bottle-with-pipette-serum_251474-590.jpg" alt="Serum" width="150" height="150">
-        <h3>Serum</h3>
-        <p>Brighten your skin with natural ingredients.</p>
-      </div>
-      <div class="product-card" onclick="showDetails('moisturizer')">
-        <img src="https://static.vecteezy.com/system/resources/previews/044/092/394/non_2x/soothing-green-botanical-moisturizer-for-sensitive-skin-eco-conscious-skincare-free-photo.jpg" alt="Moisturizer" width="150" height="150">
-        <h3>Moisturizer</h3>
-        <p>Keep your skin soft, smooth, and hydrated.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="product-details" id="product-details">
-    <div id="sunscreen" class="product-info">
-      <h2>Sunscreen</h2>
-      <img src="https://img.freepik.com/premium-photo/sunscreen-sandy-beach-with-sunglasses-generative-ai_641010-8834.jpg" alt="Sunscreen" width="400" height="400">
-      <p>This sunscreen provides broad-spectrum protection against harmful UVA and UVB rays. Enriched with natural ingredients, it nourishes your skin while keeping it safe from sun damage.</p>
-      <p><strong>How to use:</strong> Apply liberally on your face and neck fifteen minutes before sun exposure. Reapply every two hours for optimal protection.</p>
-      <a class="btn" onclick="hideDetails()">Back</a>
-    </div>
-    <div id="facecleanser" class="product-info">
-      <h2>Face Cleanser</h2>
-      <img src="https://okcredit-blog-images-prod.storage.googleapis.com/2022/01/facewash1.jpg" alt="Face Cleanser" width="400" height="400">
-      <p>This face cleanser gently removes dirt and impurities while maintaining your skin's natural moisture balance. Suitable for all skin types.</p>
-      <p><strong>How to use:</strong> Apply to damp skin and massage in circular motions, then rinse thoroughly.</p>
-      <a class="btn" onclick="hideDetails()">Back</a>
-    </div>
-    <div id="serum" class="product-info">
-      <h2>Serum</h2>
-      <img src="https://img.freepik.com/premium-photo/beautiful-shot-white-glass-bottle-with-pipette-serum_251474-590.jpg" alt="Serum" width="400" height="400">
-      <p>This serum brightens your skin and reduces the appearance of dark spots with its natural formula.</p>
-      <p><strong>How to use:</strong> Apply a few drops to clean skin and gently massage in circular motions.</p>
-      <a class="btn" onclick="hideDetails()">Back</a>
-    </div>
-    <div id="moisturizer" class="product-info">
-      <h2>Moisturizer</h2>
-      <img src="https://static.vecteezy.com/system/resources/previews/044/092/394/non_2x/soothing-green-botanical-moisturizer-for-sensitive-skin-eco-conscious-skincare-free-photo.jpg" alt="Moisturizer" width="400" height="400">
-      <p>This moisturizer keeps your skin hydrated and smooth throughout the day. Perfect for dry and sensitive skin.</p>
-      <p><strong>How to use:</strong> Apply generously on your face and neck after cleansing.</p>
-      <a class="btn" onclick="hideDetails()">Back</a>
     </div>
   </section>
 
   <footer>
-    <p>© 2024 Skincare Bliss. All rights reserved.</p>
+    <p>© 2024 Skincare Dream. All rights reserved.</p>
   </footer>
 
   <script>
